# InfinityXLib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
configuration/: CMakeLists.txt  (+1 more)
modules/gui/editor/: CMakeLists.txt
modules/gui/editor/include/editor/: docker.h  editor.h  editor_tool.h  scene_manipulator.h  view.h  window_view.h
modules/gui/editor/include/editor/factory/: editor_factory.h
modules/gui/editor/include/editor/processes/: rendering_effect_processor.h
modules/gui/editor/include/editor/views/: bottom_view.h  imgui_demo_view.h  main_menu.h  main_menu_view.h  physics_simulation_view.h  profiler_view.h  rendering_view.h  resource_view.h  scene_list_view.h  scene_view.h  soft_body_view.h
modules/gui/editor/include/editor/views/factory/: resource_view_factory.h  soft_body_view_factory.h  view_factory.h
modules/gui/editor/include/editor/views/main_menu_items/: main_menu_view_item.h
modules/gui/editor/include/editor/views/physics_simulation_view/: physics_simulation_view.h
modules/gui/editor/include/editor/views/rendering_view/: rendering_effect_view.h  rendering_view.h
modules/gui/editor/include/editor/views/rendering_views/: rendering_effect_view.h
modules/gui/editor/include/editor/views/resource_views/: resource_model_view.h  resource_texture_view.h
modules/gui/editor/include/editor/views/scene_view/: game_object_view.h  scene_manipulator_view.h
modules/gui/editor/include/editor/views/scene_view/context_menus/: game_component_context_menu.h  scene_list_context_menu.h
modules/gui/editor/include/editor/views/scene_view/game_component_views/: camera_view.h  light_view.h
modules/gui/editor/include/editor/views/scene_views/: game_component_view.h  game_object_view.h  scene_manipulator_view.h  scene_view_observer.h  scene_view_subject.h
modules/gui/editor/include/editor/views/scene_views/context_menus/: game_component_context_menu.h  game_object_context_menu.h
modules/gui/editor/include/editor/views/scene_views/game_component_views/: camera_view.h  light_view.h  render_object_view.h  rigid_body_view.h
modules/gui/editor/include/editor/views/soft_body_views/: meshing_builder.h  soft_body_creator_view.h  soft_body_screen_view.h  soft_body_selector.h  soft_body_settings_view.h  soft_body_structers.h
modules/gui/editor/include/editor/views/soft_body_views/boundary_conditions/: soft_body_boundary_conditions_view.h
modules/gui/editor/include/editor/views/soft_body_views/guide/: soft_body_guide_view.h
modules/gui/editor/include/editor/views/soft_body_views/load/: soft_body_load_view.h  soft_body_load_view_factory.h  traction_force_recorder.h
modules/gui/editor/include/editor/views/soft_body_views/material/: soft_body_material_view.h
modules/gui/editor/include/editor/views/soft_body_views/meshing/: meshing_builder.h  soft_body_meshing_creation_view.h  soft_body_meshing_info_view.h  soft_body_meshing_settings_view.h  soft_body_meshing_view.h
modules/gui/editor/include/editor/views/soft_body_views/picking/: box_casting.h  ray_casting.h  rendering_spaces.h  soft_body_node_selection.h  soft_body_picker.h
modules/gui/editor/include/editor/views/soft_body_views/rendering/: soft_body_rendering_view.h
modules/gui/editor/include/editor/views/soft_body_views/scene_builder/: soft_body_scene_builder.h
modules/gui/editor/include/editor/views/soft_body_views/solver/: soft_body_solver_view.h
modules/gui/editor/include/editor/window_views/: imgui_demo_window_view.h  main_menu_window_view.h  screen_window_view.h
modules/gui/editor/include/editor/window_views/main_menu_items/: main_menu_update_item.h  main_menu_view_item.h
modules/gui/editor/src/editor/: docker.cpp  editor.cpp  editor_tool.cpp  scene_manipulator.cpp  view.cpp  window_view.cpp
modules/gui/editor/src/editor/factory/: editor_factory.cpp
modules/gui/editor/src/editor/processes/: rendering_effect_processor.cpp
modules/gui/editor/src/editor/views/: bottom_view.cpp  imgui_demo_view.cpp  main_menu.cpp  main_menu_view.cpp  physics_simulation_view.cpp  profiler_view.cpp  rendering_view.cpp  resource_view.cpp  scene_list_view.cpp  scene_view.cpp  soft_body_view.cpp
modules/gui/editor/src/editor/views/factory/: resource_view_factory.cpp  soft_body_view_factory.cpp  view_factory.cpp
modules/gui/editor/src/editor/views/main_menu_items/: main_menu_view_item.cpp
modules/gui/editor/src/editor/views/physics_simulation_view/: physics_simulation_view.cpp
modules/gui/editor/src/editor/views/rendering_view/: rendering_effect_view.cpp  rendering_view.cpp
modules/gui/editor/src/editor/views/rendering_views/: rendering_effect_view.cpp
modules/gui/editor/src/editor/views/resource_views/: resource_model_view.cpp  resource_texture_view.cpp
modules/gui/editor/src/editor/views/scene_view/: game_component_view.cpp  game_object_view.cpp  movable_object_view.cpp  scene_manipulator_view.cpp
modules/gui/editor/src/editor/views/scene_views/: game_component_view.cpp  game_object_view.cpp  movable_object_view.cpp  scene_manipulator_view.cpp  scene_view_subject.cpp
modules/gui/editor/src/editor/views/soft_body_views/: meshing_builder.cpp  soft_body_creator_view.cpp  soft_body_screen_view.cpp  soft_body_selector.cpp  soft_body_settings_view.cpp  soft_body_structures.cpp
modules/gui/editor/src/editor/window_views/: imgui_demo_window_view.cpp  main_menu_window_view.cpp  screen_window_view.cpp
modules/gui/editor/src/editor/window_views/main_menu_items/: main_menu_update_item.cpp  main_menu_view_item.cpp
modules/object/object/test/: CMakeLists.txt
modules/object/object/test/src/: object_test.cpp
tests/: CMakeLists.txt
tests/include/controls_tests/: control_context_impl.h  controlable_object.h
tests/include/physics_test/simulations/: physx_physics_simulation_test.h
tests/src/controls_tests/: control_context_impl.cpp  controlable_object.cpp  controls_tests.cpp
tests/src/game/: game_test.cpp  scene_container_test.cpp
tests/src/intergration_tests/: rt_fem_tests.cpp
tests/src/object/: game_object_test.cpp
tests/src/physics_test/simulations/: physx_physics_simulation_test.cpp
(+779 files in other folders)
